Day-7: Generics: Generic method with upper bound <T extends Number>